Spring rest example benchmark